initial test, working app to turn lights on

--- a/app/src/main/res/xml/voice_trigger.xml
+++ b/app/src/main/res/xml/voice_trigger.xml
@@ -1,2 +1,4 @@
 <!-- For more information about voice trigger, check out: https://developers.google.com/glass/develop/gdk/starting-glassware -->
-<trigger command="SHOW_ME_A_DEMO" />
+<trigger command="CONTROL_MY_HOME">
+    <input prompt="@string/glass_voice_prompt" />
+</trigger>
